--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "express": "^4.18.2",
-    "mongoose": "^7.0.1",
+    "postgres": "^3.3.4",
+    "prettier": "^2.8.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-chat-engine": "^1.11.28",
+    "react-chat-engine-components": "^0.1.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
